import { ConstraintError } from 'helpful-errors';
import Joi from 'joi';
import { getError } from 'test-fns';
import { getUuid as uuid } from 'uuid-fns';
import * as yup from 'yup';
import { z } from 'zod';

import { DomainObject } from './DomainObject';
import { HelpfulJoiValidationError } from './validate/HelpfulJoiValidationError';
import { HelpfulYupValidationError } from './validate/HelpfulYupValidationError';
import { HelpfulZodValidationError } from './validate/HelpfulZodValidationError';

describe('DomainObject', () => {
  describe('domain modeling use cases', () => {
    it('should be able to represent a literal', () => {
      interface ChatMessage {
        userUuid: string;
        conversationUuid: string;
        message: string;
      }
      class ChatMessage
        extends DomainObject<ChatMessage>
        implements ChatMessage {}
      const message = new ChatMessage({
        userUuid: uuid(),
        conversationUuid: uuid(),
        message: 'Hello, World!',
      });
      expect(message).toBeInstanceOf(ChatMessage); // sanity check
    });
    it('should be able to represent an entity', () => {
      interface RocketShip {
        serialNumber: string;
        fuelQuantity: number;
        passengers: number;
      }
      class RocketShip extends DomainObject<RocketShip> implements RocketShip {}
      const ship = new RocketShip({
        serialNumber: uuid(),
        fuelQuantity: 9001,
        passengers: 21,
      });
      expect(ship).toBeInstanceOf(RocketShip); // sanity check
    });
  });

  describe('instantiation', () => {
    interface ChatMessage {
      userUuid: string;
      conversationUuid: string;
      message: string;
    }
    class ChatMessage
      extends DomainObject<ChatMessage>
      implements ChatMessage {}
    it('should assign all properties in the constructor to the instance', () => {
      const message = new ChatMessage({
        userUuid: '__USER_UUID__',
        conversationUuid: '__CONVO_UUID__',
        message: 'Hello, World!',
      });
      expect(message.userUuid).toEqual('__USER_UUID__');
      expect(message.conversationUuid).toEqual('__CONVO_UUID__');
      expect(message.message).toEqual('Hello, World!');
    });
    it('should be able to spread into itself', () => {
      const message = new ChatMessage({
        userUuid: '__USER_UUID__',
        conversationUuid: '__CONVO_UUID__',
        message: 'Hello, World!',
      });
      const updatedMessage = new ChatMessage({
        ...message,
        message: `Hello, World!\n Edit: You're great!`,
      });
      expect(updatedMessage.userUuid).toEqual('__USER_UUID__');
      expect(updatedMessage.conversationUuid).toEqual('__CONVO_UUID__');
      expect(updatedMessage.message).toEqual(
        `Hello, World!\n Edit: You're great!`,
      );
    });
  });

  describe('validation', () => {
    describe('Joi schema', () => {
      interface RocketShip {
        serialNumber: string;
        fuelQuantity: number;
        passengers: number;
      }
      const schema = Joi.object().keys({
        serialNumber: Joi.string().uuid().required(),
        fuelQuantity: Joi.number().required(),
        passengers: Joi.number().max(42).required(),
      });
      class RocketShip extends DomainObject<RocketShip> implements RocketShip {
        public static schema = schema;
      }
      it('should not throw error if when valid', () => {
        const ship = new RocketShip({
          serialNumber: uuid(),
          fuelQuantity: 9001,
          passengers: 21,
        });
        expect(ship).toBeInstanceOf(RocketShip); // sanity check
      });
      it('should throw a helpful error when does not pass joi schema', () => {
        try {
          // eslint-disable-next-line no-new
          new RocketShip({
            serialNumber: '__SOME_UUID__',
            fuelQuantity: 9001,
            passengers: 50,
          });
          throw new Error('should not reach here');
        } catch (error) {
          if (!(error instanceof Error)) throw error;
          expect(error).toBeInstanceOf(HelpfulJoiValidationError);
          expect(error.message).toMatchSnapshot();
        }
      });
    });
    describe('Yup schema', () => {
      interface RocketShip {
        serialNumber: string;
        fuelQuantity: number;
        passengers: number;
      }
      const schema = yup.object({
        serialNumber: yup.string().required(),
        fuelQuantity: yup.number().required(),
        passengers: yup.number().max(42).required(),
      });
      class RocketShip extends DomainObject<RocketShip> implements RocketShip {
        public static schema = schema;
      }
      it('should not throw error if when valid', () => {
        const ship = new RocketShip({
          serialNumber: uuid(),
          fuelQuantity: 9001,
          passengers: 21,
        });
        expect(ship).toBeInstanceOf(RocketShip); // sanity check
      });
      it('should throw a helpful error when does not pass schema', () => {
        try {
          // eslint-disable-next-line no-new
          new RocketShip({
            serialNumber: '__SOME_UUID__',
            fuelQuantity: 9001,
            passengers: 50,
          });
          throw new Error('should not reach here');
        } catch (error) {
          if (!(error instanceof Error)) throw error;
          expect(error).toBeInstanceOf(HelpfulYupValidationError);
          expect(error.message).toMatchSnapshot();
        }
      });
    });

    describe('Zod schema', () => {
      interface RocketShip {
        serialNumber: string;
        fuelQuantity: number;
        passengers: number;
      }
      const schema = z.object({
        serialNumber: z.string(),
        fuelQuantity: z.number(),
        passengers: z.number().max(42),
      });
      class RocketShip extends DomainObject<RocketShip> implements RocketShip {
        public static schema = schema;
      }
      it('should not throw error if when valid', () => {
        const ship = new RocketShip({
          serialNumber: uuid(),
          fuelQuantity: 9001,
          passengers: 21,
        });
        expect(ship).toBeInstanceOf(RocketShip); // sanity check
      });
      it('should throw a helpful error when does not pass schema', () => {
        try {
          // eslint-disable-next-line no-new
          new RocketShip({
            serialNumber: '__SOME_UUID__',
            fuelQuantity: 9001,
            passengers: 50,
          });
          throw new Error('should not reach here');
        } catch (error) {
          if (!(error instanceof Error)) throw error;
          expect(error).toBeInstanceOf(HelpfulZodValidationError);
          expect(error.message).toMatchSnapshot();
        }
      });
    });

    describe('hydration', () => {
      it('should hydrate nested domain objects', () => {
        // define the plant pot
        interface PlantPot {
          diameterInInches: number;
        }
        class PlantPot extends DomainObject<PlantPot> implements PlantPot {}

        // define the plant
        interface Plant {
          pot: PlantPot;
          lastWatered: string;
        }
        class Plant extends DomainObject<Plant> implements Plant {
          public static nested = { pot: PlantPot };
        }

        // now show that we hydrate the pot
        const plant = new Plant({
          pot: { diameterInInches: 7 },
          lastWatered: 'monday',
        });
        expect(plant.pot).toBeInstanceOf(PlantPot);
      });
      it('should hydrate nested array of domain objects', () => {
        // define the plant owners
        interface PlantOwner {
          name: string;
        }
        class PlantOwner
          extends DomainObject<PlantOwner>
          implements PlantOwner {}

        // define the plant
        interface Plant {
          owners: PlantOwner[];
          lastWatered: string;
        }
        class Plant extends DomainObject<Plant> implements Plant {
          public static nested = { owners: PlantOwner };
        }

        // now show that we hydrate the pot
        const plant = new Plant({
          owners: [{ name: 'bob' }],
          lastWatered: 'monday',
        });
        plant.owners.forEach((owner) =>
          expect(owner).toBeInstanceOf(PlantOwner),
        );
      });
      it('should not hydrate nullable nested domain objects when null', () => {
        // define the plant owners
        interface PlantOwner {
          name: string;
        }
        class PlantOwner
          extends DomainObject<PlantOwner>
          implements PlantOwner {}

        // define the plant
        interface Plant {
          owners: PlantOwner[] | null;
          lastWatered: string;
        }
        class Plant extends DomainObject<Plant> implements Plant {
          public static nested = { owners: PlantOwner };
        }

        // now show that we hydrate the pot
        const plant = new Plant({ owners: null, lastWatered: 'monday' });
        expect(plant.owners).toEqual(null); // should still be null - since should not have instantiated
      });
      it('should hydrate nested domain objects correctly when given choice of different options', () => {
        // define the plant pot
        interface PlantPot {
          diameterInInches: number;
        }
        class PlantPot extends DomainObject<PlantPot> implements PlantPot {}

        // define the plant bed
        interface PlantBed {
          location: string;
        }
        class PlantBed extends DomainObject<PlantBed> implements PlantBed {}

        // define the plant
        interface Plant {
          plantedIn: PlantPot | PlantBed;
          lastWatered: string;
        }
        class Plant extends DomainObject<Plant> implements Plant {
          public static nested = { plantedIn: [PlantPot, PlantBed] };
        }

        // now show that we hydrate the pot correctly
        const plant = new Plant({
          plantedIn: { _dobj: 'PlantPot', diameterInInches: 7 } as PlantPot,
          lastWatered: 'monday',
        });
        expect(plant.plantedIn).toBeInstanceOf(PlantPot);
      });
    });
  });

  describe('.contract', () => {
    it('should stamp identity + key metadata onto the schema for a seaturtle entity', () => {
      // define a seaturtle domain entity with a zod schema + keys
      interface Seaturtle {
        uuid?: string;
        name: string;
        species: string;
      }
      class Seaturtle extends DomainObject<Seaturtle> implements Seaturtle {
        public static primary = ['uuid'] as const;
        public static unique = ['name'] as const;
        public static alias = { singular: 'seaturtle', plural: 'seaturtles' };
        public static schema = z.object({
          uuid: z.string().optional(),
          name: z.string(),
          species: z.string(),
        });
      }

      // read the contract and serialize it to json-schema
      const json: Record<string, any> = z.toJSONSchema(Seaturtle.contract);

      // the x-domain-object pragma carries the seaturtle's identity + keys across the wire
      expect(json['x-domain-object']).toEqual({
        name: 'Seaturtle',
        primary: ['uuid'],
        unique: ['name'],
        alias: { singular: 'seaturtle', plural: 'seaturtles' },
      });

      // snapshot the full json-schema for visual review in prs
      expect(json).toMatchSnapshot();
    });

    it('should fail fast with a ConstraintError when no schema is declared', () => {
      // a seaturtle without a schema has no shape to identify
      interface Seaturtle {
        name: string;
      }
      class Seaturtle extends DomainObject<Seaturtle> implements Seaturtle {}

      const error = getError(() => Seaturtle.contract);
      expect(error).toBeInstanceOf(ConstraintError);
      expect(error.message).toContain('requires a static schema');

      // snapshot the message so hint/word regressions surface in pr diffs
      expect(error.message).toMatchSnapshot();
    });
  });

  describe('.build', () => {
    it('should reject props with extra keys', () => {
      interface RocketShip {
        serialNumber: string;
        fuelQuantity: number;
        passengers: number;
      }
      class RocketShip extends DomainObject<RocketShip> implements RocketShip {}

      RocketShip.build({
        serialNumber: uuid(),
        fuelQuantity: 1000,
        passengers: 5,
        // @ts-expect-error — extra key not defined in RocketShip
        unauthorizedKey: true,
      });
    });

    it('should reject props with missing required keys', () => {
      interface RocketShip {
        serialNumber: string;
        fuelQuantity: number;
        passengers: number;
      }
      class RocketShip extends DomainObject<RocketShip> implements RocketShip {}

      // @ts-expect-error — missing required field `serialNumber`
      RocketShip.build({
        fuelQuantity: 1000,
        passengers: 5,
      });
    });

    it('should reject props with wrong types', () => {
      interface RocketShip {
        serialNumber: string;
        fuelQuantity: number;
        passengers: number;
      }
      class RocketShip extends DomainObject<RocketShip> implements RocketShip {}

      RocketShip.build({
        serialNumber: uuid(),
        // @ts-expect-error — fuelQuantity should be a number
        fuelQuantity: 'a lot',
        passengers: 3,
      });
    });

    describe('.clone', () => {
      it('should be possible to clone an instance ergonomically', () => {
        interface RocketShip {
          serialNumber: string;
          fuelQuantity: number;
          passengers: number;
        }
        class RocketShip
          extends DomainObject<RocketShip>
          implements RocketShip {}
        const ship = RocketShip.build({
          serialNumber: uuid(),
          fuelQuantity: 9001,
          passengers: 21,
        });
        expect(ship).toBeInstanceOf(RocketShip); // sanity check

        // clone it
        const shipB = ship.clone();
        expect(shipB.fuelQuantity).toEqual(9001);
        const shipC = ship.clone({ fuelQuantity: 821 });
        expect(shipC.fuelQuantity).toEqual(821);
      });

      it('should reject updates with extra keys', () => {
        interface RocketShip {
          serialNumber: string;
          fuelQuantity: number;
          passengers: number;
        }
        class RocketShip
          extends DomainObject<RocketShip>
          implements RocketShip {}

        const ship = RocketShip.build({
          serialNumber: uuid(),
          fuelQuantity: 1000,
          passengers: 3,
        });

        // @ts-expect-error — unauthorizedKey is not valid
        ship.clone({ unauthorizedKey: true });
      });

      it('should reject updates with wrong value types', () => {
        interface RocketShip {
          serialNumber: string;
          fuelQuantity: number;
          passengers: number;
        }
        class RocketShip
          extends DomainObject<RocketShip>
          implements RocketShip {}

        const ship = RocketShip.build({
          serialNumber: uuid(),
          fuelQuantity: 1000,
          passengers: 3,
        });

        // @ts-expect-error — passengers should be a number
        ship.clone({ passengers: 'three' });
      });

      it('should preserve constructor.name and instanceof for simple domain objects', () => {
        interface RocketShip {
          serialNumber: string;
          fuelQuantity: number;
          passengers: number;
        }
        class RocketShip
          extends DomainObject<RocketShip>
          implements RocketShip {}

        const ship = RocketShip.build({
          serialNumber: uuid(),
          fuelQuantity: 9001,
          passengers: 21,
        });

        const cloned = ship.clone();

        // This was returning 'Object' before the fix in withImmute.ts
        expect(cloned.constructor.name).toBe('RocketShip');
        expect(cloned instanceof RocketShip).toBe(true);
        expect(cloned).toBeInstanceOf(RocketShip);
      });

      it('should preserve constructor.name and instanceof for nested domain objects', () => {
        // define the plant pot
        interface PlantPot {
          diameterInInches: number;
        }
        class PlantPot extends DomainObject<PlantPot> implements PlantPot {}

        // define the plant
        interface Plant {
          pot: PlantPot;
          lastWatered: string;
        }
        class Plant extends DomainObject<Plant> implements Plant {
          public static nested = { pot: PlantPot };
        }

        const plant = Plant.build({
          pot: { diameterInInches: 7 },
          lastWatered: 'monday',
        });

        const cloned = plant.clone({ lastWatered: 'tuesday' });

        // verify root object constructor is preserved
        expect(cloned.constructor.name).toBe('Plant');
        expect(cloned instanceof Plant).toBe(true);
        expect(cloned).toBeInstanceOf(Plant);

        // verify nested object constructor is preserved
        expect(cloned.pot.constructor.name).toBe('PlantPot');
        expect(cloned.pot instanceof PlantPot).toBe(true);
        expect(cloned.pot).toBeInstanceOf(PlantPot);
      });
    });
  });
});
