// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DomainObject .contract should fail fast with a ConstraintError when no schema is declared 1`] = `
"✋ ConstraintError: Seaturtle.contract requires a static schema. declare \`static schema\` (zod) on Seaturtle to use .contract

{
  "domainObject": "Seaturtle"
}"
`;

exports[`DomainObject .contract should stamp identity + key metadata onto the schema for a seaturtle entity 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "name": {
      "type": "string",
    },
    "species": {
      "type": "string",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "name",
    "species",
  ],
  "type": "object",
  "x-domain-object": {
    "alias": {
      "plural": "seaturtles",
      "singular": "seaturtle",
    },
    "name": "Seaturtle",
    "primary": [
      "uuid",
    ],
    "unique": [
      "name",
    ],
  },
}
`;

exports[`DomainObject validation Joi schema should throw a helpful error when does not pass joi schema 1`] = `
"Errors on 1 properties were found while validating properties for domain object RocketShip.:
[
  {
    "message": "\\"serialNumber\\" must be a valid GUID",
    "path": "serialNumber",
    "type": "string.guid"
  }
]

Props Provided:
{
  "serialNumber": "__SOME_UUID__",
  "fuelQuantity": 9001,
  "passengers": 50
}"
`;

exports[`DomainObject validation Yup schema should throw a helpful error when does not pass schema 1`] = `
"Errors were found while validating properties for domain object RocketShip.:
[
  "passengers must be less than or equal to 42"
]

Props Provided:
{
  "serialNumber": "__SOME_UUID__",
  "fuelQuantity": 9001,
  "passengers": 50
}"
`;

exports[`DomainObject validation Zod schema should throw a helpful error when does not pass schema 1`] = `
"Errors were found while validating properties for domain object RocketShip.:
[
  {
    "origin": "number",
    "code": "too_big",
    "maximum": 42,
    "inclusive": true,
    "path": [
      "passengers"
    ],
    "message": "Too big: expected number to be <=42"
  }
]

Props Provided:
{
  "serialNumber": "__SOME_UUID__",
  "fuelQuantity": 9001,
  "passengers": 50
}"
`;
